src/styles/menu.styl
.menu-button
    simpleButton(my-black, my-white)

.side-menu
    position fixed
    top 0
    right -300px
    width 200px
    height 100%
    background-color my-black
    box-shadow -2px 0 5px rgba(0,0,0,0.5)
    transition right 0.3s ease
    padding 20px
    z-index 1000

.side-menu ul
    list-style-type none
    padding 0

.side-menu ul li
    margin 20px 0

.user-name
    padding 7px
    color my-white
    border none
    font-size 30px

.close-button
    simpleButton(my-red, my-white)

.side-menu.open
    right 0

.background-menu
    position fixed
    pointer-events none
    inset 0
    background-color my-blackout
    z-index -1
    opacity 0
    transition opacity 0.3s ease

.side-menu.open .background-menu
    opacity 1
    pointer-events auto

